--- a/app/(site)/component/footer/footer.scss
+++ b/app/(site)/component/footer/footer.scss
@@ -7,6 +7,7 @@
 .footer {
   width: 100%;
   padding-top: utils.bu(13);
+  padding-bottom: utils.bu(10);
   background-color: map.get(colors.$base-color, primary);
   color: map.get(colors.$base-color, black);
   text-transform: uppercase;
@@ -49,7 +50,9 @@
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    margin-top: utils.bu(7.5);
+    z-index: 2;
+    position: fixed;
+    bottom: 0;
 
     @include mixins.breakpoint(lg) {
       display: none;
